--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
+    "framer-motion": "^12.34.0",
     "json-server": "^1.0.0-beta.5",
     "next": "16.1.6",
     "react": "19.2.3",
